--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@ body {
   background-color: #ecf0f2;
   font-family: helvetica, arial, sans-serif;
   font-size: 16px;
-  padding-top: 330px;
+  /* padding-top: 330px; */
   -moz-transition: padding-top 0.5s ease;
   -o-transition: padding-top 0.5s ease;
   -webkit-transition: padding-top 0.5s ease;
@@ -26,11 +26,11 @@ body {
 
 header {
   width: 100%;
-  height: 300px;
+  /* height: 300px; */
   background-color: #e1dbc4;
   text-align: center;
   position: relative;
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   overflow: hidden;
   -moz-transition: all 0.5s ease;
@@ -43,7 +43,7 @@ header {
 header h1 {
   font-size: 42px;
   color: #666;
-  line-height: 230px;
+  /* line-height: 230px; */
   text-transform: uppercase;
   font-weight: 100;
   -moz-transition: all 0.3s ease;
@@ -54,7 +54,7 @@ header h1 {
 }
 
 header nav {
-  position: absolute;
+  position: relative;
   bottom: 0;
   height: 60px;
   line-height: 60px;
