--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,9 +7,11 @@
     <link href='static/css/bootstrap.min.css' rel="stylesheet" type='text/css'>
   </head>
   <body>
+    <div class="container">
     {% include 'includes/_messages.html' %}
     {% include 'includes/_navbar.html' %}
     {% block body %}{% endblock %}
+    </div>
   <script src="static/js/myscript.js"></script>
   </body>
 </html>
