--- a/templates/add_article.html
+++ b/templates/add_article.html
@@ -3,12 +3,12 @@
 {% block body %}
   <h1>Add article</h1>
   {% from "includes/_formhelpers.html" import render_field %}
-  <form methods="POST" action="">
+  <form method="POST" action="">
     <div class="form-group">
-      {{ render_field(form.title, class_="form-control") }}
+      {{ render_field(form.title, class="form-control") }}
     </div>
     <div class="form-group">
-      {{ render_field(form.body, class_="form-control") }}
+      {{ render_field(form.body, class="form-control") }}
     </div>
     <input class="btn btn-primary" type="submit" value="Submit">
   </form>
