--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,10 @@
 
 {% block body %}
 <p> This is a rendered html file</p>
+{% if session.logged_in == Null%}
+  <a href="/login" class="btn btn-primary btn-lg"> Login</a>
+  <a href="/Register" class="btn btn-primary btn-lg"> Register</a>
+{% endif %}
+
 {% endblock %}
 
