Completed the code base

--- a/templates/articles.html
+++ b/templates/articles.html
@@ -4,7 +4,9 @@
   <h1>Articles</h1>
   <ul>
     {% for article in articles %}
-    <li><a href='article/{{article.id}}'>{{article.title}}</a></li>
+      <li>
+        <a href="article/{{article.id}}">{{article.title}}</a>
+      </li>
     {% endfor %}
   </ul>
 {% endblock %}
