--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -5,7 +5,7 @@
     <a href="/about">About</a>
     <a href="http://kraftycoder.ml">Portfolio</a>
     <a href="http://kraftycoder.ml#skills">Services</a>
-    <a href="/articles">Articles</a>
+    <a href="/articles">Items</a>
     {% if session.logged_in %}
     <a href="/dashboard">Dashboard</a>
     <a href="/logout">Logout</a>
