--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <p> This is a rendered html file</p>
 {% if session.logged_in == Null%}
   <a href="/login" class="btn btn-primary btn-lg"> Login</a>
-  <a href="/Register" class="btn btn-primary btn-lg"> Register</a>
+  <a href="/register" class="btn btn-primary btn-lg"> Register</a>
 {% endif %}
 
 {% endblock %}
