--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,7 +20,12 @@
         <td>{{article.author}}</td>
         <td>{{article.date}}</td>
         <td><a href="edit_article/{{article.id}}" class="btn btn-default pull-right">Edit</a> </td>
-        <td><a href="" class="btn btn-danger">Delete</a</td>
+        <td>
+            <form action="{{url_for('delete_article', id=article.id)}}" method="POST">
+                <input type="hidden" name="_method" value="DELETE">
+                <input type="submit" value="Delete" class="btn btn-danger">
+            </form>
+        </td>
       </tr>
     {% endfor %}
   </table>
