add articles display on home page

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -4,7 +4,7 @@
     <a href="/">Home</a>
     <a href="/about">About</a>
     <a href="http://kraftycoder.ml">Portfolio</a>
-    <a href="http://kraftycoder.ml#skills">Services</a>
+    <a href="http://kraftycoder.ml/#services">Services</a>
     <a href="/articles">Articles</a>
     {% if session.logged_in %}
     <a href="/dashboard">Dashboard</a>
