--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,15 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<p> This is a rendered html file</p>
+<div class="image">
+  <img src="static/images/gamer.jpeg" alt="background image">
+</div>
+<div class="align-center">
+<p> Blog Site </p>
 {% if session.logged_in == Null%}
-  <a href="/login" class="btn btn-primary btn-lg"> Login</a>
-  <a href="/register" class="btn btn-primary btn-lg"> Register</a>
+  <a href="/login" class="btn btn-lg"> Login</a>
+  <a href="/register" class="btn btn-lg"> Register</a>
+</div>
 {% endif %}
 
 {% endblock %}
-
