--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Flask Prototype</title>
     <link href='static/css/style.css' rel="stylesheet" type='text/css'>
+    <link href='static/css/index.css' rel="stylesheet" type='text/css'>
     <link href='static/css/bootstrap.min.css' rel="stylesheet" type='text/css'>
   </head>
   <body>
