--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="image">
-  <img src="static/images/gamer.jpeg" alt="background image">
+  <img class="image" src="static/images/gamer.jpeg" alt="background image">
 </div>
 <div class="align-center">
 <p> Blog Site </p>
@@ -11,5 +11,23 @@
   <a href="/register" class="btn btn-lg"> Register</a>
 </div>
 {% endif %}
+
+<section class="cards-wrapper">
+  {% for article in articles %}
+  <div class="card-grid-space">
+    <div class="num">{{article.id}}</div>
+    <a class="card" href="article/{{article.id}}" style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
+      <div>
+        <h1>{{article.title}}</h1>
+        <p>{{article.body[0:52]}}</p>
+        <div class="date">{{article.date}}</div>
+        <div class="tags">
+          <div class="tag">Python</div>
+        </div>
+      </div>
+    </a>
+  </div>
+  {% endfor %}
+</section>
 
 {% endblock %}
