--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,19 +9,17 @@ html,
 body {
   padding: 0;
   margin: 0;
-  padding-bottom: 120px;
 }
 
 body {
-  background-color: #ecf0f2;
+  background-color: #111;
   font-family: helvetica, arial, sans-serif;
   font-size: 16px;
-  padding-top: 330px;
+  padding-top: 52vh;
   -moz-transition: padding-top 0.5s ease;
   -o-transition: padding-top 0.5s ease;
   -webkit-transition: padding-top 0.5s ease;
   transition: padding-top 0.5s ease;
-
 }
 
 section {
@@ -30,8 +28,8 @@ section {
 
 header {
   width: 100%;
-  height: 300px;
-  background-color: #e1dbc4;
+  height: 50vh;
+  background-color: #111;
   text-align: center;
   position: absolute;
   z-index: 9999;
