change the linking of the images, attributes and static files

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
       <div>
         <h1>{{article.title}}</h1>
         <p>{{article.body[0:52]}}</p>
-        <div class="date">{{article.date}}</div>
+        <div class="date">{{article.create_date}}</div>
         <div class="tags">
           <div class="tag">Python</div>
         </div>
