--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,21 +6,24 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Flask Prototype</title>
-    <link href='static/css/style.css' rel="stylesheet" type='text/css'>
-    <link href='static/css/index.css' rel="stylesheet" type='text/css'>
-    <link href='static/css/particle.css' rel="stylesheet" type='text/css'>
-    <link href='static/css/bootstrap.min.css' rel="stylesheet" type='text/css'>
+    <link href='/static/css/style.css' rel="stylesheet" type='text/css'>
+    <link href='/static/css/index.css' rel="stylesheet" type='text/css'>
+    <link href='/static/css/article.css' rel="stylesheet" type='text/css'>
+    <link href='/static/css/footer.css' rel="stylesheet" type='text/css'>
+    <link href='/static/css/particle.css' rel="stylesheet" type='text/css'>
+    <link href='/static/css/bootstrap.min.css' rel="stylesheet" type='text/css'>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
   </head>
   <body>
     <div class="container">
       {% include 'includes/_messages.html' %}
       {% include 'includes/_navbar.html' %}
       {% block body %}{% endblock %}
-      {% include 'includes/_footer.html' %}
     </div>
-    <script src="static/js/jquery.min.js"></script>
-    <script src="static/js/myscript.js"></script>
-    <script src="static/js/particle.js"></script>
-    <script src="static/js/hero.js"></script>
+      {% include 'includes/_footer.html' %}
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/myscript.js"></script>
+    <script src="/static/js/particle.js"></script>
+    <script src="/static/js/hero.js"></script>
   </body>
 </html>
