--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     </div>
     <div class="form-group">
       <label>Password</label>
-      <input type="text" name="password" class="form-control" value={{request.form.password}}>
+      <input type="password" name="password" class="form-control" value={{request.form.password}}>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
