--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,19 +1,22 @@
 .image {
+  margin: auto;
+  width: 70%;
+  color: black
 }
-.image {
-  width: 100%;
-  height: 50vh;
+.image p {
+  color: black;
 }
 .align-center {
   text-align: center;
 }
 .align-center a {
   background-color: #0100fa;
-  color: #fff;
+  color: #ffe;
   margin: 1em 1em;
 }
 
 align-center a:hover {
-  color: black;
+  background-color: #010;
+  color: #fff;
   font-weight: 900;
 }
