--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,13 @@
 
 {% block body %}
 <div class="image">
-  <img class="image" src="static/images/gamer.jpeg" alt="background image">
+  <p>
+  Welcome to my blog awesome guy... You read, comment share and if you have a great piece you can 
+  request via my inbox and get your article posted for free..
+  </p>
+  <p> Make sure you share your favorite one to your friends and even make an impression on what
+  you think about the site below.
+  </p>
 </div>
 <div class="align-center">
 <p> Blog Site </p>
