--- a/static/css/particle.css
+++ b/static/css/particle.css
@@ -70,6 +70,7 @@
 #particles-js {
   position: absolute;
   width: 100%;
+  height: 100%;
   background-color: black;
   background-image: url("https://images.unsplash.com/photo-1453672655124-085736c852be?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=79ac2efe17116535e293054dfb10e6c7");
   background-repeat: no-repeat;
@@ -146,3 +147,28 @@
 box-shadow: 0px 0px 65px -16px rgba(255,255,255,1);
   background-color: black;
 }
+
+@media only screen and (max-width: 600px) {
+  .headerimg {
+    margin-top: 2em;
+    border-radius: 35%;
+    max-width: 90px;
+    max-height: 100px;
+  }
+  header .h2header {
+    border-left: 6px solid #FAFAFA;
+    padding-left: 20px;
+    font-family: verdana;
+    font-size: 1.2em;
+    letter-spacing: 10px;
+    display: inline-block;
+    font-weight: 100;
+    color: white;
+    position: relative;
+    margin-top: 1em;
+  }
+}
+
+
+
+
