add styling for all p tags and heading tags

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,10 +11,22 @@ body {
   margin: 0;
 }
 
+p {
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 1.2em;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Titillium Web', sans-serif;
+}
+
 body {
   background-color: #111;
-  font-family: helvetica, arial, sans-serif;
-  font-size: 16px;
+  font-family: 'Maven Pro', sans-serif;
   padding-top: 52vh;
   -moz-transition: padding-top 0.5s ease;
   -o-transition: padding-top 0.5s ease;
@@ -55,7 +67,6 @@ header h1 {
   -o-transition: all 0.3s ease;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
-
 }
 
 header nav {
@@ -66,7 +77,6 @@ header nav {
   line-height: 60px;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.1);
-
 }
 
 header nav a {
@@ -78,14 +88,12 @@ header nav a {
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
-
+  box-shadow: 0 0 0 1px #fff;
 }
 
 header nav a:hover {
-  -moz-box-shadow: 0 0 0 1px #fff;
-  -webkit-box-shadow: 0 0 0 1px #fff;
-  box-shadow: 0 0 0 1px #fff;
-
+  background-color: white;
+  color: gray;
 }
 
 h2 {
@@ -109,21 +117,6 @@ p {
 
 }
 
-/*
-section {
-  padding: 20px;
-  margin-bottom: 40px;
-  background-color: #fff;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
-
-}
-*/
-
 /* Sticky Header Style */
 /* ---------------------------------------- */
 
@@ -142,12 +135,19 @@ section {
   transform: scale(0, 0);
 }
 
+.sticky-header nav a {
+  font-size: 18px;
+  padding: 0.5em;
+  border: 1px;
+}
+
+.sticky-header nav {
+  background-color: rgba(0, 0, 0, 0.9);
+}
 
 /*
 This is the styling for articles.css
 */
-
-@import url('https://fonts.googleapis.com/css?family=Heebo:400,700|Open+Sans:400,700');
 
 :root {
   --color: #3c3163;
@@ -161,7 +161,6 @@ This is the styling for articles.css
 body {
   margin: 0;
   min-height: 100vh;
-  font-family: 'Open Sans';
   background: #fafafa;
 }
 
@@ -181,7 +180,6 @@ a {
 }
 
 .card {
-  font-family: 'Heebo';
   --bg-filter-opacity: 0.5;
   background-image: linear-gradient(rgba(0,0,0,var(--bg-filter-opacity)),rgba(0,0,0,var(--bg-filter-opacity))), var(--bg-img);
   height: 20em;
@@ -215,7 +213,6 @@ a {
 
 .card p {
   font-size: 0.75em;
-  font-family: 'Open Sans';
   margin-top: 0.5em;
   line-height: 2em;
 }
@@ -232,6 +229,10 @@ a {
   margin-right: 0.5em;
   line-height: 1.5em;
   transition: all, var(--transition-time);
+}
+
+.card:hover p {
+  background: var(--color);
 }
 
 .card:hover .tags .tag {
@@ -269,7 +270,7 @@ a {
 }
 
 .card:after {
-  background: white;
+  background: #999;
   width: 200%;
   height: 200%;
 }
