remove bootstrap and add font links

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,10 +8,11 @@
     <title>Flask Prototype</title>
     <link href='/static/css/style.css' rel="stylesheet" type='text/css'>
     <link href='/static/css/index.css' rel="stylesheet" type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <link href='/static/css/article.css' rel="stylesheet" type='text/css'>
     <link href='/static/css/footer.css' rel="stylesheet" type='text/css'>
     <link href='/static/css/particle.css' rel="stylesheet" type='text/css'>
-    <link href='/static/css/bootstrap.min.css' rel="stylesheet" type='text/css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
   </head>
   <body>
