--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -9,16 +9,14 @@
     </div>
     <nav>
       <a href="/">Home</a>
-      <a href="/about">About</a>
       <a href="http://kraftycoder.ml">Portfolio</a>
-      <a href="http://kraftycoder.ml/#services">Services</a>
       <a href="/articles">Articles</a>
       {% if session.logged_in %}
       <a href="/dashboard">Dashboard</a>
       <a href="/logout">Logout</a>
-      {% else %}
-      <a href="/register">Register</a>
-      <a href="/login">Login</a>
+      <!-- make sure youi include an else if here -->
+      <!-- <a href="/register">Register</a> -->
+      <!-- <a href="/login">Login</a> -->
       {% endif %}
     </nav>
   </header>
