--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,6 +1,4 @@
 #footer {
-  padding: 0;
-  margin: 0;
   background-color: black;
   margin: auto;
   text-align: center;
@@ -11,6 +9,9 @@
 p {
   padding: 0.6em 0;
   color: white;
+}
+div p {
+  margin:0;
 }
 .container-max#social {
   padding: .3em 0;
