remove p tag and add heading

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,13 @@
 
 {% block body %}
 <div class="image">
+  <h1>Krafty Coder official blog</h1>
   <p>
   Welcome to my blog awesome guy... You read, comment, share and if you have a great piece you can
   request via my inbox and get your article posted for free..
   </p>
 </div>
 <div class="align-center">
-<p> Blog Site </p>
 <!-- {% if session.logged_in == Null%} -->
 <!--   <a href="/login" class="btn btn-lg"> Login</a> -->
 <!--   <a href="/register" class="btn btn-lg"> Register</a> -->
