--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -1,6 +1,6 @@
 <section id="footer">
   <div class="socialDark container-max">
-    <p> Quick take me there links</p>
+    <p class="white"> Quick take me there links</p>
     <ul>
       <li><a href="#hero">Home</a></li>
       <li><a href="/about">About</a></li>
@@ -20,7 +20,7 @@
       <a href="https://snapchat.com/add/kraftycoder"><span class="fab fa-snapchat"></span></a>
     </div>
     <div>
-      <p> made with <span>♥</span> by <a href="https://github.com/Krafty-Coder">KraftyCoder</a></p>
+      <p class="white"> made with <span>♥</span> by <a href="https://github.com/Krafty-Coder">KraftyCoder</a></p>
     </div>
   </div>
 </section>
