change display for all articles

--- a/templates/articles.html
+++ b/templates/articles.html
@@ -1,57 +1,55 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-  <h1>Articles</h1>
-  <ul>
-    {% for article in articles %}
-      <li>
-        <a href="article/{{article.id}}">{{article.title}}</a>
-      </li>
-    {% endfor %}
-  </ul>
+{% for article in articles %}
+<h1>Available Articles</h1>
+<p> This site now has {{ articles.count(article) }} <p>
+{% endfor %}
 
 <section class="cards-wrapper">
   <div class="card-grid-space">
-    <div class="num">01</div>
-    <a class="card" href="https://codetheweb.blog/2017/10/06/html-syntax/" style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
+    {% for article in articles %}
+    <div class="num">{{article.id}}</div>
+    <a class="card" href="article/{{article.id}}" style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
       <div>
-        <h1>HTML Syntax</h1>
-        <p>The syntax of a language is how it works. How to actually write it. Learn HTML syntax…</p>
-        <div class="date">6 Oct 2017</div>
+        <h1>{{article.title}}</h1>
+        <p>{{article.body[0:60]}}</p>
+        <div class="date">{{article.create_date}}</div>
         <div class="tags">
-          <div class="tag">HTML</div>
+          <div class="tag">Python</div>
         </div>
       </div>
     </a>
+    {% endfor %}
   </div>
-  <div class="card-grid-space">
-    <div class="num">02</div>
-    <a class="card" href="https://codetheweb.blog/2017/10/09/basic-types-of-html-tags/" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')">
-      <div>
-        <h1>Basic types of HTML tags</h1>
-        <p>Learn about some of the most common HTML tags…</p>
-        <div class="date">9 Oct 2017</div>
-        <div class="tags">
-          <div class="tag">HTML</div>
-        </div>
-      </div>
-    </a>
-  </div>
-  <div class="card-grid-space">
-    <div class="num">03</div>
-    <a class="card" href="https://codetheweb.blog/2017/10/14/links-images-about-file-paths/" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/links-images-about-file-paths/cover.jpg')">
-      <div>
-        <h1>Links, images and about file paths</h1>
-        <p>Learn how to use links and images along with file paths…</p>
-        <div class="date">14 Oct 2017</div>
-        <div class="tags">
-          <div class="tag">HTML</div>
-        </div>
-      </div>
-    </a>
-  </div>
-  <!-- https://images.unsplash.com/photo-1520839090488-4a6c211e2f94?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=38951b8650067840307cba514b554ba5&auto=format&fit=crop&w=1350&q=80 -->
-</section>
+  <!-- <div class="card-grid-space"> -->
+  <!--   <div class="num">02</div> -->
+    <!--   <a class="card" href="https://codetheweb.blog/2017/10/09/basic-types-of-html-tags/" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')"> -->
+    <!--     <div> -->
+    <!--       <h1>Basic types of HTML tags</h1> -->
+    <!--       <p>Learn about some of the most common HTML tags…</p> -->
+    <!--       <div class="date">9 Oct 2017</div> -->
+    <!--       <div class="tags"> -->
+    <!--         <div class="tag">HTML</div> -->
+    <!--       </div> -->
+    <!--     </div> -->
+    <!--   </a> -->
+    <!-- </div> -->
+    <!-- <div class="card-grid-space"> -->
+    <!--   <div class="num">03</div> -->
+    <!--   <a class="card" href="https://codetheweb.blog/2017/10/14/links-images-about-file-paths/" style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/links-images-about-file-paths/cover.jpg')"> -->
+    <!--     <div> -->
+    <!--       <h1>Links, images and about file paths</h1> -->
+    <!--       <p>Learn how to use links and images along with file paths…</p> -->
+    <!--       <div class="date">14 Oct 2017</div> -->
+    <!--       <div class="tags"> -->
+    <!--         <div class="tag">HTML</div> -->
+    <!--       </div> -->
+    <!--     </div> -->
+    <!--   </a> -->
+    <!-- </div> -->
+    <!-- https://images.unsplash.com/photo-1520839090488-4a6c211e2f94?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=38951b8650067840307cba514b554ba5&auto=format&fit=crop&w=1350&q=80 -->
+  </section>
 
 
 {% endblock %}
