--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -13,10 +13,10 @@
     <div id="social">
       <a href="https://www.quora.com/profile/Malcolm-Peter-1"><span class="fab fa-quora"></span></a>
       <a href="https://twitter.com/KraftyCoder"><span class="fab fa-twitter"></span></a>
+      <a href="https://github.com/Krafty-Coder"><span class="fab fa-github"></span></a>
       <a href="linkedin.com/in/krafty"><span class="fab fa-linkedin"></span></a>
       <a href="https://instagram.com/krafty_coder"><span class="fab fa-instagram"></span></a>
       <a href="https://www.codewars.com/users/KraftyCoder"><span></span></a>
-      <a href="#"><span class="fab fa-youtube"></span></a>
       <a href="https://snapchat.com/add/kraftycoder"><span class="fab fa-snapchat"></span></a>
     </div>
     <div>
