comment out nav links for checking sessions

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -11,9 +11,9 @@
       <a href="/">Home</a>
       <a href="http://kraftycoder.ml">Portfolio</a>
       <a href="/articles">Articles</a>
-      {% if session.logged_in %}
-      <a href="/dashboard">Dashboard</a>
-      <a href="/logout">Logout</a>
+      <!-- {% if session.logged_in %} -->
+      <!-- <a href="/dashboard">Dashboard</a> -->
+      <!-- <a href="/logout">Logout</a> -->
       <!-- make sure youi include an else if here -->
       <!-- <a href="/register">Register</a> -->
       <!-- <a href="/login">Login</a> -->
