remove the uncommented elif statement

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -17,7 +17,7 @@
       <!-- make sure youi include an else if here -->
       <!-- <a href="/register">Register</a> -->
       <!-- <a href="/login">Login</a> -->
-      {% endif %}
+      <!-- {% endif %} -->
     </nav>
   </header>
 </section>
