add new html title tag

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Flask Prototype</title>
+    <title>Krafty Coder's Official Blog Site</title>
     <link href='/static/css/style.css' rel="stylesheet" type='text/css'>
     <link href='/static/css/index.css' rel="stylesheet" type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
