fix querying for articles on html

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
     <a class="card" href="article/{{article.id}}" style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
       <div>
         <h1>{{article.title}}</h1>
-        <p>{{article.body[0:60]}}</p>
+        <p>{{article.text[0:60]}}</p>
         <div class="date">{{article.create_date}}</div>
         <div class="tags">
           <div class="tag">Python</div>
