--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -21,7 +21,7 @@
         <td>{{article.date}}</td>
         <td><a href="edit_article/{{article.id}}" class="btn btn-default pull-right">Edit</a> </td>
         <td>
-            <form action="{{url_for('delete_article', id=article.id)}}" method="POST">
+            <form action="{{url_for('delete_article', id=article[0])}}" method="POST">
                 <input type="hidden" name="_method" value="DELETE">
                 <input type="submit" value="Delete" class="btn btn-danger">
             </form>
