--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -15,13 +15,13 @@
     </tr>
     {% for article in articles%}
       <tr>
-        <td>{{article.id}}</td>
-        <td>{{article.title}}</td>
-        <td>{{article.author}}</td>
-        <td>{{article.date}}</td>
-        <td><a href="edit_article/{{article.id}}" class="btn btn-default pull-right">Edit</a> </td>
+        <td>{{article['id']}}</td>
+        <td>{{article['title']}}</td>
+        <td>{{article['author']}}</td>
+        <td>{{article['date']}}</td>
+        <td><a href="edit_article/{{article['id']}}" class="btn btn-default pull-right">Edit</a> </td>
         <td>
-            <form action="{{url_for('delete_article', id=article[0])}}" method="POST">
+            <form action="{{url_for('delete_article', id=article['id'])}}" method="POST">
                 <input type="hidden" name="_method" value="DELETE">
                 <input type="submit" value="Delete" class="btn btn-danger">
             </form>
