--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -9,26 +9,8 @@
     </div>
     <nav>
       <a href="/">Home</a>
-      <a href="http://kraftycoder.ml">Portfolio</a>
+      <a href="http://github.com/Krafty-Coder">Github</a>
       <a href="/articles">Articles</a>
-      <!-- {% if session.logged_in %} -->
-      <!-- <a href="/dashboard">Dashboard</a> -->
-      <!-- <a href="/logout">Logout</a> -->
-      <!-- make sure youi include an else if here -->
-      <!-- <a href="/register">Register</a> -->
-      <!-- <a href="/login">Login</a> -->
-      <!-- {% endif %} -->
-<!--       <a href="/about">About</a> -->
-<!--       <a href="http://kraftycoder.ml">Portfolio</a>
-      <a href="http://kraftycoder.ml/#services">Services</a>
-      <a href="/articles">Articles</a>
-      {% if session.logged_in %}
-      <a href="/dashboard">Dashboard</a>
-      <a href="/logout">Logout</a>
-      {% else %}
-      <a href="/register">Register</a>
-      <a href="/login">Login</a>
-      {% endif %} -->
     </nav>
   </header>
 </section>
