--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -2,7 +2,7 @@
   <header>
     <div class="body">
       <div id="particles-js" class="fadeIn"></div>
-      <img class="headerimg fadeInUp animated" src="/static/images/krafty.jpg"/>
+      <img class="headerimg fadeInUp animated" src="/static/images/krafty.png"/>
       <div class="header">
         <h2 class="fadeInUp animated text h2header animate fadeInDown"> Krafty Coder </h2>
       </div>
