--- a/app/templates/includes/_footer.html
+++ b/app/templates/includes/_footer.html
@@ -2,10 +2,10 @@
   <div class="socialDark container-max">
     <p class="white">Reach me through</p>
     <div>
-      <img src="https://www.codewars.com/users/KraftyCoder/badges/large">
+      <a href="https://www.codewars.com/users/KraftyCoder"><img src="https://www.codewars.com/users/KraftyCoder/badges/micro"></a>
     </div>
     <div id="social">
-      <!-- <a href="https://www.quora.com/profile/Malcolm-Peter-1"><span class="fab fa-quora"></span></a> -->
+      <a href="https://www.quora.com/profile/Malcolm-Peter-1"><span class="fab fa-quora"></span></a>
       <a href="https://twitter.com/KraftyCoder"><span class="fab fa-twitter"></span></a>
       <a href="https://github.com/Krafty-Coder"><span class="fab fa-github"></span></a>
       <a href="linkedin.com/in/krafty"><span class="fab fa-linkedin"></span></a>
