change codewars logo size

--- a/app/templates/includes/_footer.html
+++ b/app/templates/includes/_footer.html
@@ -1,7 +1,7 @@
 <section id="footer">
   <div class="socialDark container-max">
     <p class="white">Reach me through</p>
-    <div>
+    <div class="codewars">
       <a href="https://www.codewars.com/users/KraftyCoder"><img src="https://www.codewars.com/users/KraftyCoder/badges/micro"></a>
     </div>
     <div id="social">
