change size of image on footer for codewars

--- a/app/templates/includes/_footer.html
+++ b/app/templates/includes/_footer.html
@@ -1,8 +1,8 @@
 <section id="footer">
   <div class="socialDark container-max">
     <p class="white">Reach me through</p>
-    <div class="codewars">
-      <a href="https://www.codewars.com/users/KraftyCoder"><img src="https://www.codewars.com/users/KraftyCoder/badges/micro"></a>
+    <div>
+      <a class="codewars" href="https://www.codewars.com/users/KraftyCoder"><img src="https://www.codewars.com/users/KraftyCoder/badges/micro"></a>
     </div>
     <div id="social">
       <a href="https://www.quora.com/profile/Malcolm-Peter-1"><span class="fab fa-quora"></span></a>
