change size of image on footer for codewars

--- a/app/static/css/footer.css
+++ b/app/static/css/footer.css
@@ -20,7 +20,7 @@ div p {
   cursor: default;
   text-align: center;
 }
-.container-max a {
+.container-max#social a {
   display: inline-flex;
   cursor: pointer;
   width: 2em;
